cmip indeces gadi calcs

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -72,6 +72,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The heavy lifting - you need the output from this to proceed"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "%run ./cmipIndeces.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -99,230 +113,6 @@
    "source": [
     "sstIndeces = _index.sstIndex.keys()\n",
     "pslIndeces = _index.pslIndex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "38"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(modelSet)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Climatology and piControl:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['NOAA-GFDL' 'GFDL-ESM4' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "GFDL-ESM4 starting\n",
-      "['NASA-GISS' 'GISS-E2-1-G' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "GISS-E2-1-G starting\n",
-      "['MOHC' 'HadGEM3-GC31-LL' 'r1i1p1f1' 'r1i1p1f3']\n",
-      "HadGEM3-GC31-LL starting\n",
-      "['MOHC' 'HadGEM3-GC31-MM' 'r1i1p1f1' 'r1i1p1f3']\n",
-      "HadGEM3-GC31-MM starting\n"
-     ]
-    }
-   ],
-   "source": [
-    "for iModel in modelSet[20:,:]:\n",
-    "    \n",
-    "    print(iModel)\n",
-    "    \n",
-    "    try: \n",
-    "        #calculate climatology\n",
-    "        \n",
-    "        print(iModel[1] + ' starting') \n",
-    "        #SST\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).tos.to_dataset()\n",
-    "        controlDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
-    "        sstClimat=sst.calculateClimatology(controlDs)\n",
-    "\n",
-    "        [sstClimat[i].to_netcdf('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
-    "             for i in sstIndeces]\n",
-    "\n",
-    "        pslControlDs=fh.loadModelData(iModel[1], 'psl_Amon', 'piControl', iModel[2])\n",
-    "        pslClimat=psl.calculateClimatology(pslControlDs)\n",
-    "\n",
-    "        pslClimat.to_netcdf('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(iModel[1] + \"Climatology did not calculate\")\n",
-    "        print(e)\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for iModel in modelSet:\n",
-    "    \n",
-    "    print(iModel)\n",
-    "    \n",
-    "    try:\n",
-    "        sstClimat=dict()\n",
-    "\n",
-    "        for i in sstIndeces:\n",
-    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
-    "        #the piControl\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'piControl', iModel[2]).tos.to_dataset()\n",
-    "        controlDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
-    "        sstIndex = sst.calculateIndex(controlDs, sstClimat) \n",
-    "        \n",
-    "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
-    "        pslControlDs=fh.loadModelData(iModel[1], 'psl_Amon', 'piControl', iModel[2])\n",
-    "        pslIndex, junk = psl.calculateSamIndex(pslControlDs, pslClimat)\n",
-    "        \n",
-    "        indeces = xarray.merge([pslIndex, sstIndex])\n",
-    "        indeces.assign_attrs(climatology='full length of pi Control')\n",
-    "        print('Caclulating control ...')\n",
-    "        tp.averageForTimePeriod(indeces).to_netcdf(\n",
-    "            'results/cmipWarmSeasonIndeces/'+iModel[1]+'tospiControl.nc')\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        print(iModel[1] + \"piControl did not calculate\")\n",
-    "        print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Historical Indeces"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for iModel in modelSet:\n",
-    "    \n",
-    "    print(iModel)\n",
-    "    \n",
-    "    try:    \n",
-    "\n",
-    "        sstClimat=dict()\n",
-    "\n",
-    "        for i in sstIndeces:\n",
-    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstTosClimat'+iModel[1]+i+'.nc')\n",
-    "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
-    "\n",
-    "        #historical\n",
-    "        tsDs = fh.loadModelData(iModel[1], 'tos_Omon', 'historical', iModel[3]).tos.to_dataset()\n",
-    "        #sstDs = xarray.merge([tsDs.ts, fxDs.areacella])\n",
-    "        sstDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
-    "\n",
-    "        sstIndex = sst.calculateIndex(sstDs, sstClimat) #(reducing the model set at this step could save time?)\n",
-    "\n",
-    "        pslDs = fh.loadModelData(iModel[1], 'psl_Amon', 'historical',iModel[3])\n",
-    "        pslIndex, junk = psl.calculateSamIndex(pslDs, pslClimat)\n",
-    "        indeces = xarray.merge([pslIndex, sstIndex])\n",
-    "        indeces.assign_attrs(climatology='full length of pi Control')\n",
-    "        #print(indeces)\n",
-    "        print('Caclulating historical ...')\n",
-    "\n",
-    "        #save the results to file\n",
-    "        indeces.to_netcdf('results/cmipMonthlyIndeces/'+iModel[1]+'toshistorical.nc')\n",
-    "        tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'toshistorical.nc')\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(iModel[1] + \"historical did not calculate\")\n",
-    "        print(e)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Scenario Indeces"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for iModel in modelSet:\n",
-    "    \n",
-    "    print(iModel)\n",
-    "    \n",
-    "    try: \n",
-    "\n",
-    "#ref to the saved files\n",
-    "        historicalIndeces = xarray.open_dataset('results/cmipMonthlyIndeces/'+iModel[1]+'toshistorical.nc')\n",
-    "        \n",
-    "        sstClimat=dict()\n",
-    "        \n",
-    "        for i in sstIndeces:\n",
-    "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstClimat'+iModel[1]+i+'.nc')\n",
-    "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
-    "        \n",
-    "        for experiment in scenarioSet: \n",
-    "            try:\n",
-    "                variant = iModel[3]\n",
-    "                \n",
-    "                tsDs = fh.loadModelData(iModel[1], 'tos_Omon', experiment, variant).tos.to_dataset()\n",
-    "                #sstDs = xarray.merge([tsDs.ts, fxDs.areacella])\n",
-    "                sstDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
-    "\n",
-    "                sstIndex = sst.calculateIndex(sstDs, sstClimat) #(reducing the model set at this step could save time?)\n",
-    "\n",
-    "                pslDs = fh.loadModelData(iModel[1], 'psl_Amon', experiment,variant)\n",
-    "                pslIndex, junk = psl.calculateSamIndex(pslDs, pslClimat)\n",
-    "\n",
-    "                indeces = xarray.concat([\n",
-    "                    historicalIndeces, \n",
-    "                                         xarray.merge([pslIndex, sstIndex])\n",
-    "                    ], 'time')\n",
-    "\n",
-    "                indeces.assign_attrs(climatology='full length of pi Control')\n",
-    "                #print(indeces)\n",
-    "                print('Caclulating ...')\n",
-    "                tp.averageForTimePeriod(indeces).to_netcdf('results/cmipWarmSeasonIndeces/'+iModel[1]+'tos'+experiment + '.nc')\n",
-    "\n",
-    "            except Exception as e:\n",
-    "                print(iModel[1] + experiment + \" not completed: \")\n",
-    "                print(e)\n",
-    "                \n",
-    "            else:\n",
-    "                print(iModel[1] + experiment + ' complete')  \n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        \n",
-    "    else:\n",
-    "        print(iModel[1] + ' finished')"
    ]
   },
   {
@@ -600,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
