Tidy up procrastination

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -124,7 +124,7 @@
     "            \n",
     "            plotAnom(toPlot, ax)\n",
     "            \n",
-    "            plt.pcolormesh(combined.lon, combined.lat, combined.values, hatch=['.'])\n",
+    "            #plt.pcolormesh(combined.lon, combined.lat, combined.values, hatch=['.'])\n",
     "            \n",
     "            \n",
     "            \n",
