--- a/tests/exampleRainfallPlots.ipynb
+++ b/tests/exampleRainfallPlots.ipynb
@@ -5,25 +5,31 @@
    "id": "1aeffaaa-86d6-45c6-9dfe-2659f76fd72e",
    "metadata": {},
    "source": [
-    "# Example Rainfall Plots"
+    "# Example Rainfall Plots - CESM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5a65b7c4-9ec0-412d-82d6-6de40bfd1a8b",
+   "execution_count": 1,
+   "id": "c1ee299f-2cbf-4fba-aa30-aa6b8f2a021e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#data handling functions\n",
+    "import xarray\n",
+    "import numpy\n",
+    "import cftime\n",
+    "\n",
+    "#plotting functions\n",
+    "import cartopy.crs as ccrs\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "910f098d-407d-4ca4-b5c9-f72d126f81ad",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -35,17 +41,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c1ee299f-2cbf-4fba-aa30-aa6b8f2a021e",
+   "cell_type": "markdown",
+   "id": "97130a1a-0fe6-4c80-9b8b-3023bc5e14e0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import xarray\n",
-    "import numpy\n",
-    "import cftime\n",
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.pyplot as plt"
+    "Load some example data. CESM-LME splits rainfall into two parts, well just sum them."
    ]
   },
   {
@@ -562,6 +562,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9a5e159-9978-4bec-a61f-27c99ca71cc4",
+   "metadata": {},
+   "source": [
+    "Example plot for Australia at time=500"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "324eb707-4272-4da0-937c-10ff856a750a",
@@ -602,6 +610,14 @@
     "ax.coastlines(color='black')\n",
     "ax.gridlines()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c99d258-1742-4e85-a885-cb625eafd28b",
+   "metadata": {},
+   "source": [
+    "Example anomalies at time=500"
    ]
   },
   {
@@ -701,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
