--- a/tests/helperTests/testDownloads.ipynb
+++ b/tests/helperTests/testDownloads.ipynb
@@ -8,13 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This works - but since moving to Gadi, where someone else looks after data curation I have stopped using this."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../../')\n",
     "\n",
     "import helpers.fileHandler as fh\n",
     "import helpers.esgfClient as esgfClient"
@@ -2010,7 +2017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
