fix plot colours

--- a/tests/functional/testSstIndexCalcs.ipynb
+++ b/tests/functional/testSstIndexCalcs.ipynb
@@ -93,10 +93,10 @@
     "            ax = fig.add_subplot(1, 1, 1)\n",
     "\n",
     "            #plot the cvdp\n",
-    "            cvdp[keysCvdp[i]].plot(color='green' ,label='from CVDP')\n",
+    "            cvdp[keysCvdp[i]].plot(color='orange' ,label='from CVDP')\n",
     "\n",
     "            #plot the calculated one\n",
-    "            indexDs[keysIndex[i]].plot(color='orange',label='calculated')\n",
+    "            indexDs[keysIndex[i]].plot(color='green',label='calculated')\n",
     "\n",
     "            #set the horizontal axis to something nice\n",
     "            #plt.xlim(\n",
