updated sst index results and more reconstruction stuff

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -185,10 +185,10 @@
     "\n",
     "        ax=fig.add_subplot(1, nIndex, i+1, projection=ccrs.Miller())\n",
     "\n",
-    "        nEvents=impactXr.where(fEventsXr[iEvent]).isel(lon=0,lat=0).count().values\n",
+    "        nEvents=impactXr.where(fEventsXr[iEvent]==True).isel(lon=0,lat=0).count().values\n",
     "                            \n",
     "        plotAnom(\n",
-    "            impactXr.where(fEventsXr[iEvent]).mean('year'),\n",
+    "            impactXr.where(fEventsXr[iEvent]==True).mean('year'),\n",
     "            ax,\n",
     "        )\n",
     "        ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes, fontsize=22)\n",
