add two season averaging

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -168,12 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "002bf925-5936-4643-8a8b-73afcae831a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def indexPlotter(impactXr, fEventsXr, fEventsLs):\n",
+    "    \n",
+    "    axesLs=list()\n",
     "    \n",
     "    fig=plt.figure(figsize=(18,8))\n",
     "\n",
@@ -193,7 +195,13 @@
     "        )\n",
     "        ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes, fontsize=22)\n",
     "        \n",
-    "        plt.title(iEvent)"
+    "        plt.title(iEvent)\n",
+    "        \n",
+    "        axesLs.append(ax)\n",
+    "        \n",
+    "    return axesLs\n",
+    "        \n",
+    "        "
    ]
   },
   {
