fiddling with e c differences

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -70,7 +70,7 @@
     "                    transform=ccrs.PlateCarree(), cmap=cmap, extend='both'\n",
     "                   )\n",
     "    ax.coastlines(color='black')\n",
-    "    if showOcean:\n",
+    "    if showOcean==False:\n",
     "        ax.add_feature(cfeature.OCEAN,zorder=2,color='white')\n",
     "    \n",
     "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':')\n",
@@ -100,8 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "def multiPlotter(da, mask, indeces, filename):\n",
-    "    \n",
+    "def multiPlotter(da, mask, indeces, filename='', stipling=True):\n",
     "    \n",
     "    if da.year[0]<1850:\n",
     "        years=[850,1850,2000,2100]\n",
@@ -137,31 +136,31 @@
     "            \n",
     "            toPlot=da.where(plotCond).mean(['year','model']) #or 'experiment' for CESM\n",
     "            \n",
-    "            meanLessThan=(toPlot<0)\n",
-    "            lessThanCount=(da.where(plotCond).mean(['year'])<0).sum('model')\n",
-    "            condLessThan=(lessThanCount<(0.8*len(da.model.values)))\n",
-    "\n",
-    "            meanGreatThan=(toPlot>0)\n",
-    "            greatThanCount=(da.where(plotCond).mean(['year'])>0).sum('model')\n",
-    "            condGreatThan=(greatThanCount<(0.8*len(da.model.values)))\n",
-    "\n",
-    "            combined=((meanLessThan&condLessThan) | (meanGreatThan&condGreatThan))\n",
-    "\n",
-    "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
-    "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
     "            \n",
     "            plotAnom(toPlot, ax)\n",
     "            \n",
-    "            #plt.contourf(combined.lon, combined.lat, combined.values, alpha=0.5)\n",
-    "            plt.pcolor(\n",
-    "                combined.lon, combined.lat,\n",
-    "                numpy.ma.masked_equal(combined,0),\n",
-    "                hatch='+',\n",
-    "                alpha=0,\n",
-    "                shading='auto'\n",
-    "            )\n",
+    "            if stipling==True:\n",
+    "                \n",
+    "                meanLessThan=(toPlot<0)\n",
+    "                lessThanCount=(da.where(plotCond).mean(['year'])<0).sum('model')\n",
+    "                condLessThan=(lessThanCount<(0.7*len(da.model.values)))\n",
+    "\n",
+    "                meanGreatThan=(toPlot>0)\n",
+    "                greatThanCount=(da.where(plotCond).mean(['year'])>0).sum('model')\n",
+    "                condGreatThan=(greatThanCount<(0.7*len(da.model.values)))\n",
+    "\n",
+    "                combined=((meanLessThan&condLessThan) | (meanGreatThan&condGreatThan))\n",
+    "                \n",
+    "                plt.pcolor(\n",
+    "                    combined.lon, combined.lat,\n",
+    "                    numpy.ma.masked_equal(combined,0),\n",
+    "                    hatch='.',\n",
+    "                    alpha=0,\n",
+    "                    shading='auto'\n",
+    "                )\n",
     "            \n",
-    "            \n",
+    "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
+    "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
     "            ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes, fontsize=22)\n",
     "                            \n",
     "            #in the first column, put a y-label\n",
