--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -113,8 +113,8 @@
     "    fig.add_subplot(1,1,1)\n",
     "\n",
     "    \n",
-    "    mainColor=['red','blue','green']\n",
-    "    lightColor=['tomato','lightblue','lightgreen']\n",
+    "    mainColor=['red','blue','green','orange']\n",
+    "    lightColor=['tomato','lightblue','lightgreen', 'wheat']\n",
     "    \n",
     "    # for each variable number\n",
     "    for i in range(nIndices):\n",
