changing to rolling detrend

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9bdb0f30-8d97-4129-9a5e-343609e2bcd3",
    "metadata": {
     "tags": []
@@ -103,14 +103,19 @@
     "def multiPlotter(da, mask, indeces, filename='', stipling=True):\n",
     "    \n",
     "    if da.year[0]<1850:\n",
-    "        years=[850,1850,2000,2100]\n",
+    "        years=[\n",
+    "            [850,1850],[1950,1999],[2050,2099]\n",
+    "        ]\n",
     "        #Decide how many rows we are going to have\n",
     "        lenYears=3\n",
-    "    elif da.year[-1]<2050:\n",
-    "        years=[1900,2000]\n",
+    "    elif da.year[-1]<2099:\n",
+    "        years=[[1900,2000]]\n",
     "        lenYears=1\n",
     "    else:\n",
-    "        years=[1850,2000,2100]\n",
+    "        years=[\n",
+    "            [1950,1999],\n",
+    "            [2050,2099]\n",
+    "        ]\n",
     "        #Decide how many rows we are going to have\n",
     "        lenYears=2\n",
     "        \n",
@@ -121,7 +126,7 @@
     "    fig = plt.figure(figsize=(10*lenIndeces,8*lenYears))\n",
     "    \n",
     "    #for each row\n",
-    "    for iGroup in range(0,lenYears):\n",
+    "    for iYears in years:\n",
     "\n",
     "        #for each column\n",
     "        for i in range(0,lenIndeces):\n",
@@ -132,7 +137,7 @@
     "                       i+1+iGroup*lenIndeces, # index\n",
     "                       projection=ccrs.Miller())\n",
     "              #years to plot\n",
-    "            plotCond = mask[indeces[i]].sel(year=slice(years[iGroup],years[iGroup+1]))\n",
+    "            plotCond = mask[indeces[i]].sel(year=slice(iYears[0],iYears[1]))\n",
     "            \n",
     "            toPlot=da.where(plotCond).mean(['year','model']) #or 'experiment' for CESM\n",
     "            \n",
