--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def emergePlot(binnedXr, climatXr):\n",
+    "def emergePlot(binnedXr, climatXr, yLabel='number of events/30 years'):\n",
     "\n",
     "    # plot indeces for multi-experiment mean, and add some lines for CI\n",
     "    \n",
@@ -65,9 +65,7 @@
     "        \n",
     "        #Tidy up a bit\n",
     "        plt.xlabel('year')\n",
-    "        plt.ylabel('number of events/30 years')\n",
-    "        #plt.xlim(1000,2100)\n",
-    "        #plt.ylim(0,16)\n",
+    "        plt.ylabel(yLabel)\n",
     "        plt.minorticks_on()\n",
     "        plt.legend()\n"
    ]
@@ -109,7 +107,7 @@
     "    nIndices=len(indexToPlot)\n",
     "\n",
     "    # define somewhere to plot\n",
-    "    fig = plt.figure(figsize=(12,6))\n",
+    "    fig = plt.figure(figsize=(10,5))\n",
     "    fig.add_subplot(1,1,1)\n",
     "\n",
     "    \n",
