Pr and temp trends

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -9,7 +9,22 @@
    "source": [
     "import cartopy.crs as ccrs\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as mpatches\n",
     "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508358c6-98f0-4f01-b902-205a61a5e3d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "prMatcher=re.compile('pr')\n",
+    "prPrecMatcher=re.compile('prPercent')\n",
+    "tsMatcher=re.compile('ts')\n"
    ]
   },
   {
@@ -37,51 +52,66 @@
    },
    "outputs": [],
    "source": [
-    "def plotAnom(da, ax, showOcean=True):\n",
+    "def plotAnom(da, ax, showOcean=True, stipling=True):\n",
     "    import cartopy.feature as cfeature\n",
-    "    import re\n",
     "    \n",
-    "    prMatcher=re.compile('pr')\n",
-    "    prPrecMatcher=re.compile('prPercent')\n",
-    "    tsMatcher=re.compile('ts')\n",
-    "    \n",
-    "    \n",
-    "    label=''\n",
-    "    #set contour intervals and colours\n",
-    "  \n",
+    "        #set contour intervals and colours\n",
     "    if prPrecMatcher.search(da.name):\n",
     "        precContours=numpy.arange(-100,101,20)\n",
     "        cmap='BrBG'\n",
-    "        label='Anomaly (%)'\n",
     "    elif prMatcher.search(da.name):\n",
     "        precContours=numpy.arange(-1.6,1.61,0.2)\n",
     "        cmap='BrBG'\n",
-    "        label='Anomaly (mm/day)'\n",
     "    elif tsMatcher.search(da.name):\n",
     "        precContours=numpy.arange(-3.25,3.26,0.5)\n",
     "        cmap='coolwarm'\n",
-    "        label='Warm Season Anomaly(C)'\n",
     "    else:\n",
     "        precContours=numpy.linspace(da.min(), da.max(), 7)\n",
     "        cmap='viridis'\n",
     "    \n",
     "    #do the plotting\n",
     "    cs=plt.contourf(\n",
-    "        da.lon, da.lat, da.values, precContours, \n",
+    "        da.lon, da.lat, da.mean('model'), precContours, \n",
     "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both'\n",
     "    )\n",
+    "    \n",
+    "    #draw the coast too\n",
     "    ax.coastlines(color='black')\n",
     "    if showOcean==False:\n",
     "        ax.add_feature(cfeature.OCEAN,zorder=2,color='white')\n",
-    "    \n",
+    "        \n",
+    "    #deaw a box around the area of interest\n",
+    "    ax.add_patch(\n",
+    "        mpatches.Rectangle(\n",
+    "            xy=[144, -39], width=11, height=11,edgecolor='red',facecolor='none' \n",
+    "        )\n",
+    "    )\n",
+    "            \n",
+    "    if stipling==True:\n",
+    "\n",
+    "        meanLessThan=(da.mean('model')<0)\n",
+    "        lessThanCount=(da<0).sum('model')\n",
+    "        condLessThan=(lessThanCount<(0.7*len(da.model.values)))\n",
+    "\n",
+    "        meanGreatThan=(da.mean('model')>0)\n",
+    "        greatThanCount=(da>0).sum('model')\n",
+    "        condGreatThan=(greatThanCount<(0.7*len(da.model.values)))\n",
+    "\n",
+    "        combined=((meanLessThan&condLessThan) | (meanGreatThan&condGreatThan))\n",
+    "\n",
+    "        plt.pcolor(\n",
+    "            combined.lon, combined.lat,\n",
+    "            numpy.ma.masked_equal(combined,0),\n",
+    "            hatch='.',\n",
+    "            alpha=0,\n",
+    "            shading='auto'\n",
+    "        )\n",
+    "\n",
     "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':')\n",
     "    gl.top_labels=False\n",
     "    gl.left_labels=False\n",
     "    \n",
-    "        #bottom legend\n",
-    "    cbar=plt.colorbar(orientation='horizontal', fraction=0.05, pad=0.05)\n",
-    "    cbar.set_label(label)\n",
-    "    \n"
+    "    return precContours, cmap\n"
    ]
   },
   {
@@ -101,13 +131,13 @@
    },
    "outputs": [],
    "source": [
-    "def multiPlotter(da, mask, indeces, filename='', stipling=True):\n",
-    "    \n",
+    "def multiPlotter(da, mask, indeces, stipling=True):\n",
+    "\n",
+    "    #Decide how many rows we are going to have\n",
     "    if da.year[0]<1850:\n",
     "        years=[\n",
     "            [850,1850],[1950,1999],[2050,2099]\n",
     "        ]\n",
-    "        #Decide how many rows we are going to have\n",
     "        lenYears=3\n",
     "    elif da.year[-1]<2050:\n",
     "        years=[[1900,2000]]\n",
@@ -117,11 +147,9 @@
     "            [1950,1999],\n",
     "            [2050,2099]\n",
     "        ]\n",
-    "        #Decide how many rows we are going to have\n",
     "        lenYears=2\n",
-    "        \n",
     "\n",
-    "     \n",
+    "    #how many columns\n",
     "    lenIndeces=len(indeces)\n",
     "    \n",
     "    fig = plt.figure(figsize=(10*lenIndeces,8*lenYears))\n",
@@ -139,35 +167,20 @@
     "                lenYears, #how many columns\n",
     "                lenIndeces, #how many rows\n",
     "                i+1+iGroup*lenIndeces, # index\n",
-    "                projection=ccrs.Miller()\n",
+    "                projection=ccrs.PlateCarree()\n",
     "            )\n",
     "              #years to plot\n",
     "            plotCond = mask[indeces[i]].sel(year=slice(iYears[0],iYears[1]))\n",
     "            \n",
-    "            toPlot=da.where(plotCond).mean(['year','model']) #or 'experiment' for CESM\n",
+    "            toPlot = da.where(plotCond).mean(['year'])\n",
     "            \n",
+    "            plotAnom(toPlot, ax, stipling=stipling)\n",
     "            \n",
-    "            plotAnom(toPlot, ax)\n",
+    "             #in the last row put a colobar\n",
+    "            if iGroup==(lenYears-1):\n",
+    "                cbar=plt.colorbar(orientation='horizontal', fraction=0.05, pad=0.05)\n",
+    "                cbar.set_label(label)\n",
     "            \n",
-    "            if stipling==True:\n",
-    "                \n",
-    "                meanLessThan=(toPlot<0)\n",
-    "                lessThanCount=(da.where(plotCond).mean(['year'])<0).sum('model')\n",
-    "                condLessThan=(lessThanCount<(0.7*len(da.model.values)))\n",
-    "\n",
-    "                meanGreatThan=(toPlot>0)\n",
-    "                greatThanCount=(da.where(plotCond).mean(['year'])>0).sum('model')\n",
-    "                condGreatThan=(greatThanCount<(0.7*len(da.model.values)))\n",
-    "\n",
-    "                combined=((meanLessThan&condLessThan) | (meanGreatThan&condGreatThan))\n",
-    "                \n",
-    "                plt.pcolor(\n",
-    "                    combined.lon, combined.lat,\n",
-    "                    numpy.ma.masked_equal(combined,0),\n",
-    "                    hatch='.',\n",
-    "                    alpha=0,\n",
-    "                    shading='auto'\n",
-    "                )\n",
     "            \n",
     "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
     "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
@@ -181,21 +194,13 @@
     "                        verticalalignment='center', fontsize=30)\n",
     "            \n",
     "            #in the first row put a heading\n",
-    "            if iGroup ==0 :\n",
+    "            if iGroup==0 :\n",
     "                ax.set_title('Mean ' + da.name +' anomoly with ' + indeces[i] + ' event',\n",
     "                             fontsize=22)\n",
     "                \n",
-    "    #plt.savefig(filename)\n",
-    "    plt.show()"
+    "           \n",
+    "                \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2038558-8154-4824-80e4-8a6e02258f84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
