--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -116,8 +116,8 @@
     "    nIndices=len(indexToPlot)\n",
     "\n",
     "    # define somewhere to plot\n",
-    "    fig = plt.figure(figsize=(10,5))\n",
-    "    fig.add_subplot(1,1,1)\n",
+    "    #fig = plt.figure(figsize=(10,5))\n",
+    "    #fig.add_subplot(1,1,1)\n",
     "\n",
     "    \n",
     "    mainColor=['red','blue','green','orange']\n",
