Pr and temp trends

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -69,7 +69,7 @@
     "        precContours=numpy.linspace(da.min(), da.max(), 7)\n",
     "        cmap='viridis'\n",
     "    \n",
-    "    #do the plotting\n",
+    "     #do the plotting\n",
     "    cs=plt.contourf(\n",
     "        da.lon, da.lat, da.mean('model'), precContours, \n",
     "        transform=ccrs.PlateCarree(), cmap=cmap, extend='both'\n",
@@ -107,11 +107,13 @@
     "            shading='auto'\n",
     "        )\n",
     "\n",
+    "   \n",
+    "        \n",
     "    gl=ax.gridlines(draw_labels=True, linewidth=1, color='gray', alpha=0.5, linestyle=':')\n",
     "    gl.top_labels=False\n",
     "    gl.left_labels=False\n",
     "    \n",
-    "    return precContours, cmap\n"
+    "    return cs\n"
    ]
   },
   {
@@ -176,10 +178,9 @@
     "            \n",
     "            plotAnom(toPlot, ax, stipling=stipling)\n",
     "            \n",
-    "             #in the last row put a colobar\n",
+    "             #in the last row put a colorbar\n",
     "            if iGroup==(lenYears-1):\n",
     "                cbar=plt.colorbar(orientation='horizontal', fraction=0.05, pad=0.05)\n",
-    "                cbar.set_label(label)\n",
     "            \n",
     "            \n",
     "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
