tweaks to impact plots

--- a/helpers/impactPlots.ipynb
+++ b/helpers/impactPlots.ipynb
@@ -22,9 +22,9 @@
    "source": [
     "import re\n",
     "\n",
-    "prMatcher=re.compile('pr')\n",
-    "prPrecMatcher=re.compile('prPercent')\n",
-    "tsMatcher=re.compile('ts')\n"
+    "prMatcher=re.compile('ps')\n",
+    "prPrecMatcher=re.compile('Rain')\n",
+    "tsMatcher=re.compile('Temp')\n"
    ]
   },
   {
@@ -105,25 +105,27 @@
    "outputs": [],
    "source": [
     "def plotStipling(da, ax):\n",
-    "    \n",
+    "    criteria=0.7*len(da.model.values) #70% of models\n",
     "\n",
-    "        meanLessThan=(da.mean('model')<0)\n",
-    "        lessThanCount=(da<0).sum('model')\n",
-    "        condLessThan=(lessThanCount<(0.7*len(da.model.values)))\n",
+    "    meanLessThan=da.mean('model')<0\n",
+    "    lessThanCount=(da<0).sum('model')\n",
+    "    condLessThan=lessThanCount<criteria\n",
     "\n",
-    "        meanGreatThan=(da.mean('model')>0)\n",
-    "        greatThanCount=(da>0).sum('model')\n",
-    "        condGreatThan=(greatThanCount<(0.7*len(da.model.values)))\n",
+    "    meanGreatThan=da.mean('model')>0\n",
+    "    greatThanCount=(da>0).sum('model')\n",
+    "    condGreatThan=greatThanCount<criteria\n",
     "\n",
-    "        combined=((meanLessThan&condLessThan) | (meanGreatThan&condGreatThan))\n",
+    "    combined=(\n",
+    "        (meanLessThan&condLessThan) | (meanGreatThan&condGreatThan)\n",
+    "    )\n",
     "\n",
-    "        plt.pcolor(\n",
-    "            combined.lon, combined.lat,\n",
-    "            numpy.ma.masked_equal(combined,0),\n",
-    "            hatch='.',\n",
-    "            alpha=0,\n",
-    "            shading='auto'\n",
-    "        )\n",
+    "    plt.pcolor(\n",
+    "        combined.lon, combined.lat,\n",
+    "        numpy.ma.masked_equal(combined,0),\n",
+    "        hatch='.',\n",
+    "        alpha=0,\n",
+    "        shading='auto'\n",
+    "    )\n",
     "\n"
    ]
   },
@@ -144,7 +146,9 @@
    },
    "outputs": [],
    "source": [
-    "def multiPlotter(da, mask, indeces, stipling=True):\n",
+    "def multiPlotter(da, mask, indeces, stipling=True, cbarLabel='_nolabel_'):\n",
+    "    import matplotlib.cm as cm\n",
+    "    import matplotlib.colorbar as cb\n",
     "\n",
     "    #Decide how many rows we are going to have\n",
     "    if da.year[0]<1850:\n",
@@ -165,7 +169,9 @@
     "    #how many columns\n",
     "    lenIndeces=len(indeces)\n",
     "    \n",
-    "    fig = plt.figure(figsize=(10*lenIndeces,8*lenYears))\n",
+    "    fig = plt.figure(figsize=(3*lenIndeces,3*(lenYears+1)))\n",
+    "    \n",
+    "    axs=list()\n",
     "    \n",
     "    #for each row\n",
     "    for iGroup in range(0,lenYears):\n",
@@ -177,9 +183,9 @@
     "            \n",
     "            #make a sub plot\n",
     "            ax=fig.add_subplot(\n",
-    "                lenYears, #how many columns\n",
-    "                lenIndeces, #how many rows\n",
-    "                i+1+iGroup*lenIndeces, # index\n",
+    "                lenYears+1, #how many rows\n",
+    "                lenIndeces, #how many columns\n",
+    "                i+1+iGroup*(lenIndeces), # index\n",
     "                projection=ccrs.PlateCarree()\n",
     "            )\n",
     "              #years to plot\n",
@@ -187,31 +193,49 @@
     "            \n",
     "            toPlot = da.where(plotCond).mean(['year'])\n",
     "            \n",
-    "            plotAnom(toPlot, ax, stipling=stipling)\n",
+    "            cs = plotAnom(toPlot.mean('model'), ax)\n",
     "            \n",
-    "             #in the last row put a colorbar\n",
-    "            if iGroup==(lenYears-1):\n",
-    "                cbar=plt.colorbar(orientation='horizontal', fraction=0.05, pad=0.05)\n",
+    "            if stipling:\n",
+    "                plotStipling(\n",
+    "                    toPlot,\n",
+    "                    ax\n",
+    "                )\n",
     "            \n",
+    "            plt.xlim([136,163])\n",
+    "            plt.ylim([-47,-20])\n",
     "            \n",
     "            #This is the number of events. Because dataset is well-curated, we can use the count from one position to be the count for everything\n",
     "            nEvents=da.where(plotCond).isel(lon=17,lat=15).count().values\n",
-    "            ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes, fontsize=22)\n",
+    "            ax.text(0.01,0.01,\"n=\"+str(nEvents), transform=ax.transAxes)\n",
     "                            \n",
     "            #in the first column, put a y-label\n",
     "            if i==0:\n",
     "                ax.text(-0.1, 0.5,  #xy relative to bottom left of axis\n",
     "                        str(iYears[0])+'-'+str(iYears[1]), #yearRange\n",
     "                        rotation='vertical', transform=ax.transAxes, \n",
-    "                        verticalalignment='center', fontsize=30)\n",
+    "                        verticalalignment='center',fontsize=14)\n",
     "            \n",
     "            #in the first row put a heading\n",
     "            if iGroup==0 :\n",
-    "                ax.set_title('Mean ' + da.name +' anomoly with ' + indeces[i] + ' event',\n",
-    "                             fontsize=22)\n",
+    "                ax.set_title(indeces[i])\n",
     "                \n",
-    "           \n",
-    "                \n"
+    "            axs.append(ax)\n",
+    "\n",
+    "    #put a color bar on\n",
+    "       \n",
+    "    axs.append(fig.add_axes([0.3,0.3,0.4,0.03]))\n",
+    "    cbar=plt.colorbar(\n",
+    "        cm.ScalarMappable(cs.norm,cs.cmap),\n",
+    "        orientation='horizontal', \n",
+    "        cax=axs[-1], \n",
+    "        extend='both', \n",
+    "        boundaries=cs.get_array(), \n",
+    "        label = cbarLabel,\n",
+    "    )\n",
+    "    \n",
+    "    return axs\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -231,7 +255,7 @@
     "    dimsNotLatLon.remove('lon')\n",
     "\n",
     "    \n",
-    "    fig=plt.figure(figsize=(40,8))\n",
+    "    fig=plt.figure(figsize=(9,4))\n",
     "\n",
     "    for i in range(0,nIndex):\n",
     "\n",
