--- a/utils/emergence.ipynb
+++ b/utils/emergence.ipynb
@@ -82,6 +82,77 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "434e5cab-6286-4698-ad2c-9c52ab8221d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modelEmergePlot(binnedXr, climatXr, yLabel='Events per 30 Years', xlim=[1900,2100]):\n",
+    "\n",
+    "    ax=list()\n",
+    "    # plot indeces for multi-experiment mean, and add some lines for CI\n",
+    "    \n",
+    "    # multi-experiment mean state (by index and time)\n",
+    "    meanXr=climatXr.mean('year')\n",
+    "    \n",
+    "    dims=list(climatXr.coords)\n",
+    "    dims.remove('year') #this is normall experiment (for CESM) or model (for CMIP)\n",
+    "    \n",
+    "    stdXr=climatXr.std('year')\n",
+    "    \n",
+    "    #Z = 1.645 #Z-score for a 90% CI\n",
+    "    Z=1.96 #Z-score for a 95% CI\n",
+    "\n",
+    "    #these are the variable/index names to plot\n",
+    "    #all variables that not empty\n",
+    "    indexToPlot = list(binnedXr.where(binnedXr.isnull().all()==False).data_vars)\n",
+    "    \n",
+    "    nIndices=len(indexToPlot)\n",
+    "\n",
+    "    # define somewhere to plot\n",
+    "    fig = plt.figure(figsize=(12,2*nIndices))\n",
+    "\n",
+    "    # for each variable number\n",
+    "    for i in range(nIndices):\n",
+    "\n",
+    "        #create a subplot (row, column, size)\n",
+    "        ax.append(fig.add_subplot(nIndices,1,i+1))\n",
+    "\n",
+    "        # plot the actual data\n",
+    "        plotData=binnedXr[indexToPlot[i]]\n",
+    "\n",
+    "        \n",
+    "        mean=plotData.mean(dims)\n",
+    "        std=plotData.std(dims)\n",
+    "        \n",
+    "        #blue line for multi-experiment mean, and light blue shading between min and max\n",
+    "        plt.plot(mean.year, \n",
+    "                 mean, \n",
+    "                 label=indexToPlot[i])\n",
+    "        plt.fill_between(mean.year, \n",
+    "                         #mean+Z*std,\n",
+    "                         #mean-Z*std,\n",
+    "                         plotData.min(dims),\n",
+    "                         plotData.max(dims),\n",
+    "                         color='lightblue')\n",
+    "\n",
+    "\n",
+    "        # draw some horizontal lines for criteria\n",
+    "        plt.axhline(y=meanXr[indexToPlot[i]]+Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
+    "        plt.axhline(y=meanXr[indexToPlot[i]]-Z*stdXr[indexToPlot[i]], dashes=(5,5), color='black')\n",
+    "\n",
+    "        #plt.axvline(x=1995)\n",
+    "        \n",
+    "        #Tidy up a bit\n",
+    "        plt.xlim(xlim)\n",
+    "        plt.ylabel(yLabel)\n",
+    "        plt.legend()\n",
+    "\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "c3a2531b-5a2d-4b9d-8c9d-6f35d87e9aba",
    "metadata": {},
    "outputs": [],
